tests/fsharp/typeProviders/negTests/neg6.bsl

neg6.fsx(8,3,8,27): typecheck error FS3063: Cannot inherit from erased provided type

neg6.fsx(8,3,8,27): typecheck error FS3063: Cannot inherit from erased provided type

neg6.fsx(11,3,11,30): typecheck error FS3063: Cannot inherit from erased provided type

neg6.fsx(11,3,11,30): typecheck error FS3063: Cannot inherit from erased provided type

neg6.fsx(14,3,14,35): typecheck error FS3063: Cannot inherit from erased provided type

neg6.fsx(14,3,14,35): typecheck error FS3063: Cannot inherit from erased provided type
